# l2-editor

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  biome.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
dat_engine/: Cargo.toml
dat_engine/data/structure/dats/: skillgrp.xml  skillname.xml
dat_engine/src/: bytes.rs  dispatch.rs  format.rs  gamedataname.rs  lib.rs  reader.rs  schema.rs  writer.rs
dat_engine/src/cipher/: lame.rs  mod.rs  rsa.rs  xor.rs
model_engine/: Cargo.toml
model_engine/src/: cursor.rs  lib.rs  package.rs  skeletal_mesh.rs  ue2_types.rs  uobject.rs
model_engine/src/mesh/: data.rs  decoder.rs  hex_dump.rs  l2_walker.rs  mod.rs  textures.rs
model_engine/src/package/: error.rs  header.rs  mod.rs  summary.rs  tables.rs
release-portable/Lineage II Editor 0.1.0/: README.txt
scripts/: note.mjs  release.mjs  zip.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: dat_db.rs  lib.rs  main.rs  runtime.rs  util.rs  world_spawns.rs
src-tauri/src/commands/: chronicle.rs  config.rs  dat.rs  discovery.rs  generic_dat.rs  l2_probe.rs  mod.rs  model.rs  npc.rs  skill_name.rs  skillgrp.rs  spawns.rs  textures.rs  xml.rs  zones.rs
src-tauri/src/extractor/: cache.rs  encode.rs  mod.rs  package.rs  properties.rs  terrain.rs  texture.rs  write.rs
src/classes/: loader.ts  model.ts  skillCatalog.ts
src/components/: CardGrid.tsx  Combobox.tsx  Dashboard.tsx  Drift.tsx  EditActions.tsx  EditorPane.tsx  FirstRunWizard.tsx  ImplementBanner.tsx  LogsPanel.tsx  ProtocolMismatchModal.tsx  SettingsModal.tsx  Sidebar.tsx  TagPicker.tsx  TextureImage.tsx  TextureProgress.tsx  Toolbar.tsx  Tooltip.tsx
src/components/classes/: ClassesWorkspace.tsx  SkillInfoModal.tsx  SkillInspector.tsx  classData.ts  classListDom.ts  treeCollapse.ts  ui.tsx
src/components/classes/detail/: AllTreesView.tsx  ClassClientData.tsx  ClassDetail.tsx  ClassTree.tsx  IssuesPanel.tsx  SkillTreeEditor.tsx  TemplateEditor.tsx  templateHelp.ts
src/components/experience/: ExperienceWorkspace.tsx
src/components/npcs/: NpcEditor.tsx  NpcFieldDrift.tsx  NpcImplementBanner.tsx  NpcModelViewport.tsx  NpcsWorkspace.tsx  TextureInfoModal.tsx
src/components/world/: WorldWorkspace.tsx
src/editors/: registry.ts  types.ts
src/editors/skills/: SkillEditor.tsx  diff.ts  index.ts  lint.ts  model.ts  sectionCollapse.ts
src/editors/skills/data/: abnormalType.ts  abnormalVisualEffect.ts  enums.ts  fieldCatalog.ts  handlerDescriptions.ts  handlerSchemas.ts  handlers.ts  help.ts  skillTrees.ts  zoneNames.ts
src/editors/skills/sections/: BlocksSection.tsx  ConditionsSection.tsx  EffectsSection.tsx  FieldsSection.tsx  SkillImplementBanner.tsx  SkillImplementBanners.tsx  clientPanels.tsx  skillEditorChrome.tsx
src/editors/skills/widgets/: CompareModal.tsx  PerLevelModal.tsx  SkillCard.tsx  ZonePicker.tsx  fieldPrimitives.tsx
src/lib/: clientNpcs.ts  datImplement.ts  dataPaths.ts  drift.ts  huntingZones.ts  ipc.ts  logger.ts  meshExport.ts  minimapRegions.ts  npcClientRow.ts  npcEnums.ts  regionTerrain.ts  rowCacheFactory.ts  skillFieldMap.ts  skillNameRowCache.ts  skillRowCache.ts  skillText.ts  spawns.ts  textureCache.ts  tier2Dats.ts  tier2RowCache.ts  uiPrefs.ts  useFileUndo.ts  useTexture.ts  worldCoords.ts  xml.ts  zones.ts
src/state/: EditorContext.tsx  SettingsContext.tsx  ToolbarSlot.tsx
