[workspace]
resolver = "2"
members = ["src-tauri", "dat_engine", "model_engine"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
quick-xml = { version = "0.36", features = ["serialize"] }
encoding_rs = "0.8"
regex = "1"
once_cell = "1"
num-bigint-dig = "0.8"
flate2 = "1"
rayon = "1"

[profile.dev.package.num-bigint-dig]
opt-level = 3
[profile.dev.package.num-traits]
opt-level = 3
[profile.dev.package.num-integer]
opt-level = 3
[profile.dev.package.num-iter]
opt-level = 3
[profile.dev.package.flate2]
opt-level = 3
[profile.dev.package.miniz_oxide]
opt-level = 3
[profile.dev.package.rayon-core]
opt-level = 3
[profile.dev.package.rayon]
opt-level = 3
[profile.dev.package.texture2ddecoder]
opt-level = 3
