[package]
name = "dat_engine"
version = "0.1.0"
edition = "2021"
description = "Shared cipher + schema engine for L2 .dat files. Used by the dat editor and the xml editor."

[lib]
name = "dat_engine"
crate-type = ["rlib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
quick-xml = { workspace = true }
encoding_rs = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
num-bigint-dig = { workspace = true }
flate2 = { workspace = true }
rayon = { workspace = true }
